--- a/app/components/lookbook/ui/app/pane/pane.css
+++ b/app/components/lookbook/ui/app/pane/pane.css
@@ -10,4 +10,10 @@
     width: 100%;
     position: relative;
   }
+
+  .pane-panels {
+    height: 100%;
+    width: 100%;
+    position: relative;
+  }
 }
