--- a/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
@@ -1,10 +1,29 @@
-<%= render component_tag(key: id, x: {data: "previewInspector", ":class": "{'drawer-closed':drawerClosed}"}) do %> 
-  <%= lookbook_layout(id: "inspector-panes", orientation: :horizontal) do |layout| %>
-    <% layout.with_pane do %>
-      <%= render preview_pane %>
-    <% end %>
-    <% layout.with_pane do %>
-      <%= render drawer_pane %>
-    <% end %>
-  <% end %>
-<% end %>
+<%=
+  render component_tag(key: "preview-inspector", x: {data: "previewInspector"}) do
+    lookbook_layout("inspector-panes", orientation: :horizontal) do |layout|
+      layout.with_pane("preview-pane") do |pane|
+        # pane.with_action(icon: :panel_bottom_open, tooltip: "Open drawer", click: "openDrawer", show: "hasDrawer && drawerClosed")
+        # pane.with_action(icon: :panel_bottom_close, tooltip: "Close drawer", click: "closeDrawer", show: "hasDrawer && !drawerClosed")
+        # pane.with_action(icon: :external_link, tooltip: "Open preview in new window", href: target.preview_path, target: "_blank")
+        pane.with_action(icon: :layers, tooltip: "Preview overview", href: preview.url_path)
+          
+
+        preview_panels.each do |panel|
+          pane.with_tab_panel(panel.name, label: panel.label) do
+            render panel.partial, preview: preview, target: target, panel: panel
+          end
+        end
+      end
+
+      layout.with_pane("drawer-pane") do |pane|
+        # pane.with_action(icon: :x, tooltip: "Close drawer", click: "closeDrawer")
+
+        drawer_panels.each do |panel|
+          pane.with_tab_panel(panel.name, label: panel.label) do
+            render panel.partial, preview: preview, target: target, panel: panel
+          end
+        end
+      end
+    end
+  end
+%>
