--- a/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
@@ -1,12 +1,10 @@
 <%= render component_tag(key: id, x: { data: "previewOverview" }) do %>
   <%= lookbook_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
-    <% pane.with_toolbar do |toolbar| %>
-      <% toolbar.with_title do %>
-        <sl-icon name="layers" class="po-title-icon"></sl-icon>
-        <span class="po-title">
-          <%= preview.label %>
-        </span>
-      <% end %>
+    <% pane.with_title do %>
+      <sl-icon name="layers" class="po-title-icon"></sl-icon>
+      <span class="po-title">
+        <%= preview.label %>
+      </span>
     <% end %>
 
     <div class="po-breadcrumbs">
