Remove shoelace buttons and icons

--- a/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
@@ -2,9 +2,9 @@
   render component_tag(key: "preview-inspector", x: {data: "previewInspector"}) do
     lookbook_layout("inspector-panes", orientation: :horizontal) do |layout|
       layout.with_pane("preview-pane") do |pane|
-        # pane.with_action(icon: :panel_bottom_open, tooltip: "Open drawer", click: "openDrawer", show: "hasDrawer && drawerClosed")
-        # pane.with_action(icon: :panel_bottom_close, tooltip: "Close drawer", click: "closeDrawer", show: "hasDrawer && !drawerClosed")
-        # pane.with_action(icon: :external_link, tooltip: "Open preview in new window", href: target.preview_path, target: "_blank")
+        pane.with_action(icon: :panel_bottom_open, tooltip: "Open drawer", click: "openDrawer", show: "drawerClosed")
+        pane.with_action(icon: :panel_bottom_close, tooltip: "Close drawer", click: "closeDrawer", show: "!drawerClosed")
+        pane.with_action(icon: :external_link, tooltip: "Open preview in new window", href: target.preview_path, target: "_blank")
         pane.with_action(icon: :layers, tooltip: "Preview overview", href: preview.url_path)
           
 
@@ -16,7 +16,7 @@
       end
 
       layout.with_pane("drawer-pane") do |pane|
-        # pane.with_action(icon: :x, tooltip: "Close drawer", click: "closeDrawer")
+        pane.with_action(icon: :x, tooltip: "Close drawer", click: "closeDrawer")
 
         drawer_panels.each do |panel|
           pane.with_tab_panel(panel.name, label: panel.label) do
