--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1333,6 +1333,43 @@ select {
     border-top: 1px solid var(--lookbook-divider-color);
   }
 
+[data-component="button"] {
+  display: inline-block;
+  width: -moz-fit-content;
+  width: fit-content;
+  line-height: 0;
+}
+
+[data-component="button"] .button-icon {
+    width: 100%;
+    height: 100%;
+  }
+
+[data-component="button"][data-size="md"] {
+    padding: 0.5rem;
+  }
+
+[data-component="button-group"] {
+  display: flex;
+  align-items: center;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+[data-component="icon"] {
+  display: inline-block;
+}
+
+[data-component="icon"] svg {
+    width: 100%;
+    height: 100%;
+  }
+
+[data-component="icon"][data-size="md"] {
+    width: 1rem;
+    height: 1rem;
+  }
+
 [data-component="icon-button"] {
 }
 
@@ -1906,20 +1943,15 @@ select {
     margin-left: var(--sl-spacing-medium);
   }
 
-[data-component="toolbar"] sl-button-group {
-    font-size: 18px;
-    font-size: var(--lookbook-toolbar-icon-button-size);
-    position: relative;
+[data-component="toolbar"] .toolbar-actions {
     margin-left: auto;
-    z-index: 1;
   }
 
-[data-component="toolbar"] sl-icon-button {
-    font-size: 1rem;
-    font-size: var(--sl-font-size-medium);
-    color: hsl(240, 5%, 65%);
-    color: var(--lookbook-toolbar-icon-button-color);
-  }
+[data-component="toolbar"] .toolbar-actions [data-component="button"] {
+      padding: 0.5rem;
+      height: 2rem;
+      width: 2rem;
+    }
 
 [data-component="toolbar-tab"] {
   height: 40px;
