--- a/assets/entrypoints/app.css
+++ b/assets/entrypoints/app.css
@@ -4,5 +4,6 @@
 @import "../css/reset.css";
 @import "../css/base.css";
 @import "../css/forms.css";
+@import "../css/tooltips.css";
 
 @import-glob "../../app/components/lookbook/ui/**/*.css";
