--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1291,6 +1291,36 @@ select {
   line-height: inherit;
 }
 
+.tippy-box[data-animation=fade][data-state=hidden]{opacity:0}
+
+[data-tippy-root]{max-width:calc(100vw - 10px)}
+
+.tippy-box{position:relative;background-color:#333;color:#fff;border-radius:4px;font-size:14px;line-height:1.4;white-space:normal;outline:0;transition-property:transform,visibility,opacity}
+
+.tippy-box[data-placement^=top]>.tippy-arrow{bottom:0}
+
+.tippy-box[data-placement^=top]>.tippy-arrow:before{bottom:-7px;left:0;border-width:8px 8px 0;border-top-color:currentcolor;border-top-color:initial;transform-origin:center top}
+
+.tippy-box[data-placement^=bottom]>.tippy-arrow{top:0}
+
+.tippy-box[data-placement^=bottom]>.tippy-arrow:before{top:-7px;left:0;border-width:0 8px 8px;border-bottom-color:currentcolor;border-bottom-color:initial;transform-origin:center bottom}
+
+.tippy-box[data-placement^=left]>.tippy-arrow{right:0}
+
+.tippy-box[data-placement^=left]>.tippy-arrow:before{border-width:8px 0 8px 8px;border-left-color:currentcolor;border-left-color:initial;right:-7px;transform-origin:center left}
+
+.tippy-box[data-placement^=right]>.tippy-arrow{left:0}
+
+.tippy-box[data-placement^=right]>.tippy-arrow:before{left:-7px;border-width:8px 8px 8px 0;border-right-color:currentcolor;border-right-color:initial;transform-origin:center right}
+
+.tippy-box[data-inertia][data-state=visible]{transition-timing-function:cubic-bezier(.54,1.5,.38,1.11)}
+
+.tippy-arrow{width:16px;height:16px;color:#333}
+
+.tippy-arrow:before{content:"";position:absolute;border-color:transparent;border-style:solid}
+
+.tippy-content{position:relative;padding:5px 9px;z-index:1}
+
 [data-component="app"] {
   height: 100vh;
   display: grid;
@@ -1347,6 +1377,8 @@ select {
 
 [data-component="button"][data-size="md"] {
     padding: 0.5rem;
+    height: 2rem;
+    width: 2rem;
   }
 
 [data-component="button-group"] {
@@ -1358,20 +1390,14 @@ select {
 
 [data-component="icon"] {
   display: inline-block;
+  aspect-ratio: 1 / 1;
+  width: 1rem;
 }
 
 [data-component="icon"] svg {
     width: 100%;
     height: 100%;
   }
-
-[data-component="icon"][data-size="md"] {
-    width: 1rem;
-    height: 1rem;
-  }
-
-[data-component="icon-button"] {
-}
 
 [data-component="layout"] {
   display: grid;
@@ -1594,17 +1620,6 @@ select {
     border: 1px solid hsl(240, 5%, 84%);
     border: 1px solid var(--lookbook-divider-color);
   }
-
-[data-component="panel"] .panel-toolbar sl-button-group {
-      font-size: 18px;
-      font-size: var(--lookbook-toolbar-icon-button-size);
-    }
-
-[data-component="panel"] .panel-toolbar sl-copy-button,
-    [data-component="panel"] .panel-toolbar sl-icon-button {
-      color: hsl(240, 5%, 65%);
-      color: var(--lookbook-toolbar-icon-button-color);
-    }
 
 [data-component="panel"] .panel-content {
     z-index: 1;
