--- a/app/components/lookbook/ui/app/icon/icon.css
+++ b/app/components/lookbook/ui/app/icon/icon.css
@@ -1,13 +1,10 @@
 [data-component="icon"] {
   display: inline-block;
+  aspect-ratio: 1 / 1;
+  width: 1rem;
 
   svg {
     width: 100%;
     height: 100%;
-  }
-
-  &[data-size="md"] {
-    width: 1rem;
-    height: 1rem;
   }
 }
