--- a/app/components/lookbook/ui/app/icon/icon.html.erb
+++ b/app/components/lookbook/ui/app/icon/icon.html.erb
@@ -1,9 +1,3 @@
-<%= render component_tag(:i,
-  x: {
-    data: "icon",
-  },
-  data: {
-    size: size
-  }) do %>
+<%= render component_tag(:i, x: {data: "icon"}) do %>
   <%= svg %>
 <% end %>
