--- a/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
@@ -1,7 +1,7 @@
 <%= render component_tag(key: id, x: { data: "previewOverview" }) do %>
   <%= lookbook_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
     <% pane.with_title do %>
-      <sl-icon name="layers" class="po-title-icon"></sl-icon>
+    <%= lookbook_icon :layers, class: "po-title-icon" %>
       <span class="po-title">
         <%= preview.label %>
       </span>
@@ -9,11 +9,11 @@
 
     <div class="po-breadcrumbs">
       <span class="po-breadcrumb"><%= previews_nav_label %></span>
-      <sl-icon name="chevron-right" class="po-breadcrumb-divider"></sl-icon>
+      <%= lookbook_icon :chevron_right, class: "po-breadcrumb-divider" %>
       <% breadcrumbs.each do |node| %>
         <span class="po-breadcrumb"><%= node.label %></span>
         <% unless node == breadcrumbs.last %>
-          <sl-icon name="chevron-right" class="po-breadcrumb-divider"></sl-icon>
+          <%= lookbook_icon :chevron_right, class: "po-breadcrumb-divider" %>
         <% end %>
       <% end %>
     </div>
@@ -35,10 +35,9 @@
         <ol>
           <% targets.each do |target| %>
             <li class="po-target">
-              <sl-button href="<%= target.url_path %>" variant="default" size="small">
-                <sl-icon slot="prefix" name="eye"></sl-icon>
+              <a href="<%= target.url_path %>">
                 <%= target.label %>
-              </sl-button>
+              </a>
             </li>
           <% end %>
         </ol>
